# flexicodec_training_share

./: .gitignore  Dockerfile  README.md  allocate_gpu.sh  pyproject.toml
conf/: codec_train.yaml  codec_train_16k.yaml
conf/data/: devbox_debug.yaml  devbox_debug_normalize.yaml  devbox_debug_raw_audio.yaml  devbox_debug_raw_audio_nosorting.yaml  devbox_debug_raw_audio_static_batch.yaml  emiliawebdataset_static_audio.yaml  emiliawebdataset_static_audio_en.yaml  runtime_dataset.yaml  runtime_dataset_normalize.yaml  runtime_dataset_normalize_subset.yaml  runtime_dataset_raw_audio.yaml  runtime_dataset_raw_audio_static_batch.yaml
conf/machine/: devbox.yaml  gluster_ssd_tts.yaml  gluster_tts.yaml  paddle.yaml
conf/model/bdcodec/: dualcodecsensevoice_12hz.yaml  dualcodecsensevoice_8hz.yaml  flexicodec_reproduce.yaml
conf/trainer/: codec_model_trainer.yaml
zero_shot_tts_training/: train.py
zero_shot_tts_training/cosyvoice/amphion_codec/: codec.py  codec_dataset.py  codec_trainer.py  vocos.py
zero_shot_tts_training/cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
zero_shot_tts_training/cosyvoice/dataset/: audiowebdataset.py  dataset.py  processor.py
zero_shot_tts_training/d2codec_tts/: base_model.py  cli_d2codec_tts_infer.py  cli_d2codec_tts_infer_dialog.py  cli_d2codec_tts_infer_librispeech.py  cli_d2codec_tts_infer_librispeech_cosyvoice.py  cli_d2codec_tts_infer_librispeech_dualcodecvalle.py  cli_d2codec_tts_infer_librispeech_enforce_12hz.py  cli_d2codec_tts_infer_librispeech_fireredtts.py  cli_d2codec_tts_infer_librispeech_sparktts.py  cli_d2codec_tts_infer_seed.py  cli_d2codec_voicebox_infer.py  cli_d2codec_voicebox_infer_librispeech.py  llm_duration.py  llm_duration_trainer.py
zero_shot_tts_training/tools/: extract_embedding.py  extract_speech_token.py  g2p_old_en.py  g2p_phonemizer.py  g2p_phonemizer_ui.py  g2p_utils_ms.py  make_parquet_list.py  source_separation.py  text_to_g2p_batch.py  whisper_tokenize.py  whisper_usage.py
(+93 files in other folders)
